--- a/examenv2/examen/src/main/resources/templates/viewsNotUsed/anotherViews/error.html
+++ b/examenv2/examen/src/main/resources/templates/viewsNotUsed/anotherViews/error.html
@@ -18,7 +18,7 @@
           <p>El recurso que solicitó no se encuentra disponible.</p>
         </div>
         <div class="btn-group">
-          <a class="btn-primary" href="/">Volver al inicio</a>
+          <a class="btn-primary" href="/libros">Volver al inicio</a>
         </div>
         <div>
           <large>
